--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://github.com/zhang-fork/zhang-fork.github.io"
+baseURL = "https://zhang-fork.github.io"
 languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "zhangFork"
